<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ticatwolves.experto.fragment.AdminHomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/fab_margin">

        <Button
            android:id="@+id/add_user"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/admin_button_background"
            android:text="@string/add_user"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/add_expert"
            android:layout_below="@+id/add_user"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/admin_button_background"
            android:text="@string/add_expert"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/add_field"
            android:layout_below="@+id/add_expert"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/admin_button_background"
            android:text="@string/add_field"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </RelativeLayout>

</FrameLayout>
