<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/fab_margin"
    android:fitsSystemWindows="true"
    tools:context=".users.SettingsActivity">
    <Button
        android:textColor="@android:color/white"
        android:id="@+id/change_email_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/btn_margin"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/change_email"
        android:textStyle="bold" />
    <Button
        android:id="@+id/change_password_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:textColor="@android:color/white"
        android:layout_margin="@dimen/btn_margin"
        android:background="@drawable/button_background"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textStyle="bold" />

    <!--Button
        android:id="@+id/change_phone_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:textColor="@android:color/white"
        android:layout_margin="@dimen/btn_margin"
        android:background="@drawable/button_background"
        android:layout_height="wrap_content"
        android:text="@string/change_phone"
        android:textStyle="bold" /-->

    <Button
        android:id="@+id/change_profile_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:textColor="@android:color/white"
        android:layout_margin="@dimen/btn_margin"
        android:background="@drawable/button_background"
        android:layout_height="wrap_content"
        android:text="@string/change_profile"
        android:textStyle="bold" />

</LinearLayout>